2006-12-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-time-regexp): Follow the change of mixi;
	Fix regexp.
	(mixi-diary-title-regexp): Ditto.
	(mixi-diary-content-regexp): Ditto.
	(mixi-diary-realize): Follow the change above.

2006-12-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-search-bbs-list-page): New macro.
	(mixi-search-bbs-list-regexp): New regexp.
	(mixi-search-bbses): New function.

2006-12-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-search-community-list-page): New macro.
	(mixi-search-community-list-regexp): New regexp.
	(mixi-search-communities): New function.

2006-12-11  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-cache-expires): Set the default value to nil.

2006-12-08  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-initialize-comment-cache): Abolish.
	(initialize-instance): Follow the change above.
	(shimbun-close): Set the comment cache to nil.

2006-12-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-comment-list-regexp): Fix regexp.
	(mixi-message): Rename the STRING argument to STRINGS.
	(mixi-login): Follow the cange above.
	(mixi-parse-buffer): Fix error message.

2006-12-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-owner-nick-regexp): Fix regexp.
	(mixi-topic-owner-regexp): Ditto.

2006-12-05  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-logout-p): New user option.
	(shimbun-mixi-initialize-comment-cache): New macro.
	(initialize-instance): Use it.
	(shimbun-close): New method.

2006-12-04  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-url-encode-and-quote-percent-string): New function.
	(mixi-search-diary-list-page): New macro.
	(mixi-search-diary-list-regexp): New regexp.
	(mixi-search-diaries): New function.
	(mixi-diary-closed-regexp): New regexp.
	(mixi-diary-realize): Use it.

	* sb-mixi.el (shimbun-mixi-group-alist): Fix docs.

2006-12-04  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-content-regexp): Fix regexp.
